--- a/package.json
+++ b/package.json
@@ -20,19 +20,33 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
+  "mikro-orm": {
+    "configPaths": [
+      "./src/database/mikro-orm.config.ts",
+      "./dist/database/mikro-orm.config.js"
+    ]
+  },
   "dependencies": {
+    "@mikro-orm/core": "^6.3.10",
+    "@mikro-orm/mariadb": "^6.3.10",
+    "@mikro-orm/nestjs": "^6.0.2",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@types/mustache-express": "^1.2.5",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.4.5",
     "mustache-express": "^1.3.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "@mikro-orm/cli": "^6.3.10",
+    "@mikro-orm/migrations": "^6.3.10",
+    "@mikro-orm/sql-highlighter": "^1.0.1",
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
@@ -41,6 +55,7 @@
     "@types/jest": "27.5.0",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
