--- a/package.json
+++ b/package.json
@@ -37,11 +37,14 @@
     "@types/mustache-express": "^1.2.5",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
+    "joi": "^17.13.3",
     "mustache-express": "^1.3.2",
+    "nest-winston": "^1.9.7",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "winston": "^3.14.2"
   },
   "devDependencies": {
     "@mikro-orm/cli": "^6.3.10",
